Update Logo Dan Header

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,7 +2,7 @@
 
 :root {
     --green: var(--primary);
-    --primary: #FF725E;
+    --primary: #009EFB;
     --black: #444;
     --dark-color: #111;
     --light-color: #ffffff;
